[package]
name = "solana-scoring"
version = "0.8.0"
description = "Solana Scoring Program"
authors = ["Solana Scoring Maintainers <solanapope@gmail.com>"]
repository = "https://github.com/nobledao/solana-scoring"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.0"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.8.1"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "1.8.1"
solana-sdk = "1.8.1"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
